--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+
+* {
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+}
+
+body {
+   font-family: 'Poppins', sans-serif;
+}
+
+.container {
+   max-width: 500px;
+   margin: 30px auto;
+   overflow: auto;
+   min-height: 300px;
+   border: 1px solid palevioletred;
+   padding: 30px;
+   border-radius: 5px;
+}
+
+.btn {
+   display: inline-block;
+   background: #000;
+   color: white;
+   border: none;
+   padding: 10px 20px;
+   margin: 5px;
+   border-radius: 5px;
+   cursor: pointer;
+   text-decoration: none;
+   font-size: 15px;
+   font-family: inherit;
+}
+
+a {
+   text-decoration: none;
+   color: whitesmoke;
+   transition: all 300ms ease-in-out;
+
+}
